--- a/src/main/resources/templates/articles/list.html
+++ b/src/main/resources/templates/articles/list.html
@@ -31,7 +31,7 @@
         </thead>
         <tbody>
         <tr th:each="article : ${articles}">
-            <td th:text="${article.id}">date</td>
+            <td th:text="${article.id}">id</td>
             <td th:text="${article.title}">Title</td>
             <td th:text="${article.authorFirstName}">Author name</td>
             <td th:text="${article.authorLastName}">Author surname</td>
